Fix vertical alignment on song cards

--- a/styles/style.css
+++ b/styles/style.css
@@ -773,6 +773,7 @@ a {
 .top_item a {
   width: 100%;
   justify-content: flex-start;
+  height: 100%;
 }
 
 .top_item {
@@ -823,13 +824,20 @@ a {
 .top_item .song_info {
   display: flex;
   flex-direction: column;
-  /* width: 70%; */
-  /* justify-content: flex-end; */
-  /* align-items: center;
-  justify-content: center; */
   text-align: left;
   margin-left: 1em;
   vertical-align: auto;
+  justify-content: space-evenly;
+  height: 100%;
+}
+
+.top_item .song_info .song_details .artist_name,
+.top_item .song_info .song_details .album_name {
+  margin: 0;
+}
+
+.top_item .song_info .song_details .album_name {
+  margin-top: 0.5em;
 }
 
 .currently_playing .song_info .song_details {
